--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <h2>A série até que eh boa, bora ganhar Wons?!</h2>
       <p> Clica aqui em baixo pra converter</p>
       <button onclick="conversor()">Boraaaaaaa!</button>
+      <script src="script.js"></script>
     </div>
   </div>
   <footer>Alura - Imersão DEV - Fernando Mazeh - 2025</footer>
